# claude-speak

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HOOKS-SETUP.md  LICENSE  README.md  claude-hooks.json  claude-speak.toml.example  cli.py  dictate.py  install.sh  plan.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: audio_issue.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
claude_speak/: __init__.py  __main__.py  audio_devices.py  chimes.py  cli.py  config.py  daemon.py  hotkeys.py  ipc.py  media_keys.py  memmon.py  models.py  normalizer.py  permissions.py  profiler.py  queue.py  setup.py  ssml.py  stt.py  train_wakeword.py  tts.py  tts_base.py  tts_elevenlabs.py  tts_piper.py  vad.py  voice_controller.py  voice_input.py  wakeword.py
claude_speak/data/: pronunciations.toml
claude_speak/hooks/: daemon_restart.py  daemon_start.py  daemon_stop.py  speak_response.py
claude_speak/platform/: __init__.py  input_helpers.py  paths.py  process.py
claude_speak/platform/macos/: hotkeys.py  input_helpers.py  media_keys.py
claude_speak/platform/windows/: input_helpers.py
docs/: ACCESSIBILITY.md  AUDIO_TEST_MATRIX.md  CONFIGURATION.md  DECISIONS.md
hooks/: daemon-restart.sh  daemon-start.sh  daemon-stop.sh  speak-response.sh
src/: __init__.py  chimes.py  config.py  daemon.py  normalizer.py  queue.py  tts.py  voice_controller.py  voice_input.py  wakeword.py
tests/: conftest.py  test_all.py  test_audio_devices.py  test_benchmark.py  test_check_permissions.py  test_chimes.py  test_collect_data.py  test_context_speech.py  test_control_api.py  test_daemon.py  test_engine_swap.py  test_hooks.py  test_hotkeys.py  test_integration.py  test_interrupt.py  test_ipc.py  test_media_keys.py  test_memmon.py  test_platform.py  test_process.py  test_profiler.py  test_security.py  test_ssml.py  test_stt.py  test_train_wakeword.py  test_tts.py  test_tts_base.py  test_tts_elevenlabs.py  test_tts_piper.py  test_vad.py  test_voice_commands.py  test_voice_controller.py  test_voice_input.py  test_wakeword.py
train/: README.md  augment_clips.py  benchmark.py  collect_data.py  generate_clips.py  train_model.py
