[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claude_speak*"]

[project]
name = "claude-speak"
version = "0.1.0"
description = "Voice interface for Claude Code — hands-free TTS, wake word detection, and voice input"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Victor Ivanov", email = "victor.n.ivanov@gmail.com"},
]
readme = "README.md"
keywords = ["claude", "tts", "voice", "speech", "kokoro", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: MacOS",
]

dependencies = [
    "kokoro-onnx>=0.4",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "onnxruntime>=1.16",
    "tomli>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
wakeword = [
    "openwakeword>=0.6",
]
piper = [
    "piper-tts>=2023.11.14",
]
stt = [
    "mlx-whisper>=0.4",
]
elevenlabs = [
    "elevenlabs>=1.0",
]
macos-extras = [
    "pyobjc-framework-Quartz>=9.0",
]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "pre-commit",
]
train = [
    "torch",
    "scipy",
    "soundfile",
    "tqdm",
]

[project.scripts]
claude-speak = "claude_speak.cli:main"

[project.urls]
Homepage = "https://github.com/vnicivanov/claude-speak"
Repository = "https://github.com/vnicivanov/claude-speak"
Issues = "https://github.com/vnicivanov/claude-speak/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_model: marks tests that require a model to be present",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "SIM105",   # contextlib.suppress — try/except/pass is clearer in our codebase
    "SIM115",   # open-file-with-context-handler — lock fd must stay open
    "RUF003",   # ambiguous unicode in comments — en-dash is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "E501", "F401", "F841", "I001", "B011", "SIM105", "SIM117", "SIM300", "RUF059"]
"train/*" = ["E501", "F401", "F841", "I001", "SIM105", "SIM117", "RUF059"]
